--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,9 +2,9 @@
 # using ubuntu LTS version
 FROM alpine:3.16 AS builder-image
 
-RUN apk update && apk add --update --no-cache python3 python3-dev py3-virtualenv py3-pip py3-wheel build-base py3-mysqlclient
-
+RUN apk update && apk add --update --no-cache python3 python3-dev py3-virtualenv py3-pip py3-wheel build-base py3-mysqlclient mariadb-dev
 # create and activate virtual environment
+
 # using final folder name to avoid path issues with packages
 RUN python3 -m venv /home/tothemoon/venv
 ENV PATH="/home/tothemoon/venv/bin:$PATH"
@@ -16,7 +16,7 @@ RUN pip3 install --no-cache-dir wheel
 RUN pip3 install --no-cache-dir -r requirements.txt
 
 FROM alpine:3.16 AS runner-image
-RUN apk update && apk add --update --no-cache python3 py3-virtualenv
+RUN apk update && apk add --update --no-cache python3 py3-virtualenv py3-mysqlclient
 
 RUN adduser -D tothemoon
 COPY --from=builder-image /home/tothemoon/venv /home/tothemoon/venv
@@ -37,4 +37,4 @@ ENV PATH="/home/tothemoon/venv/bin:$PATH"
 
 # /dev/shm is mapped to shared memory and should be used for gunicorn heartbeat
 # this will improve performance and avoid random freezes
-CMD ["gunicorn","-b", "0.0.0.0:3000", "-w", "4", "-k", "gevent", "--worker-tmp-dir", "/dev/shm", "app:app"]
+CMD ["gunicorn","-b", "0.0.0.0:3000", "-w", "4", "-k", "gevent", "--worker-tmp-dir", "/dev/shm", "app:application"]
