pytest module testing

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,3 +37,9 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
+          
+    - script: |
+        pip install pytest
+        pip install pytest-cov
+        python -m pytest tests --doctest-modules --junitxml=junit/test-results.xml --cov=. --cov-report=xml --cov-report=html
+      displayName: 'Test with pytest'
