--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,22 @@ stages:
     pool:
       name: Default
     steps:
+    - script: |
+        pip install pytest
+        pip install pytest-cov
+        python3 -m pytest app/app.py --doctest-modules --junitxml=junit/test-results.xml --cov=. --cov-report=xml --cov-report=html
+      displayName: 'Test with pytest'
+      
+    - task: PublishTestResults@2
+      inputs:
+        testResultsFormat: 'JUnit'
+        testResultsFiles: 'junit/test-results.xml'
+        failTaskOnFailedTests: true
+    - task: PublishCodeCoverageResults@1
+      inputs:
+        codeCoverageTool: Cobertura
+        summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/coverage.xml'
+        
     - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
@@ -38,8 +54,3 @@ stages:
         tags: |
           $(tag)
           
-    - script: |
-        pip install pytest
-        pip install pytest-cov
-        python -m pytest tests --doctest-modules --junitxml=junit/test-results.xml --cov=. --cov-report=xml --cov-report=html
-      displayName: 'Test with pytest'
