--- a/ansible/install-k8s.yml
+++ b/ansible/install-k8s.yml
@@ -1,11 +1,9 @@
 - hosts: "masters, workers"
-  remote_user: ubuntu
-  become: yes
-  become_method: sudo
-  become_user: root
+  become: true
+  remote_user: skyfall
+  vars:
+    ansible_ssh_private_key_file: ./id_rsa
   gather_facts: yes
-  connection: ssh
-
   tasks:
      - name: Create containerd config file
        file:
