--- a/ansible/join-workers.yml
+++ b/ansible/join-workers.yml
@@ -1,7 +1,9 @@
 - hosts: workers
-  become: yes
+  become: true
   gather_facts: yes
-
+  remote_user: skyfall
+  vars:
+    ansible_ssh_private_key_file: ./id_rsa
   tasks:
    - name: Copy join command from Ansiblehost to the worker nodes.
      become: yes
