--- a/ansible/master.yml
+++ b/ansible/master.yml
@@ -1,5 +1,8 @@
 - hosts: masters
-  become: yes
+  become: true
+  remote_user: skyfall
+  vars:
+    ansible_ssh_private_key_file: ./id_rsa
   tasks:
     - name: initialize the cluster
       shell: kubeadm init --pod-network-cidr=10.244.0.0/16
