--- a/ansible/users.yml
+++ b/ansible/users.yml
@@ -1,6 +1,8 @@
 - hosts: 'workers, masters'
-  become: yes
-
+  become: true
+  remote_user: skyfall
+  vars:
+    ansible_ssh_private_key_file: ./id_rsa
   tasks:
     - name: create the kube user account
       user: name=kube append=yes state=present createhome=yes shell=/bin/bash
